== Rolled over to ChangeLog-2013-06-11 ==